fix: spacing issue in chart toggle switch

--- a/crowdsource-fe/src/components/Switch/Switch.module.scss
+++ b/crowdsource-fe/src/components/Switch/Switch.module.scss
@@ -1,6 +1,6 @@
 .root {
   box-shadow: 0 2px 12px #9fc8ff;
-  height: 1.5rem;
+  padding: 1px;
 }
 
 .option {
